# openownership.org-wagtail

./: .codacy.yaml  .codeclimate.yml  .dockerignore  .gitignore  .gitmodules  .phase.json  LICENSE  README.md  ansible.cfg  config.toml  docker-compose.test.yml  docker-compose.yml  mise.toml  redirects.csv
app/: .dockerignore  config.toml  conftest.py  countries.csv  manage.py  pyproject.toml  setup.cfg
app/assets/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.common.js  webpack.dev.js  webpack.prod.js
app/assets/_dev/css/: admin.css  main.css
app/assets/_dev/js/: admin.js  main.js
app/config/: secrets.py  template.py  urls.py  views.py  wsgi.py
app/config/settings/: base.py  development.py  production.py  remote.py  staging.py  test.py
app/helpers/: colours.py  console.py  context.py  query.py  scaffold.py
app/locale/de/LC_MESSAGES/: django.mo  django.po
app/locale/fr/LC_MESSAGES/: django.mo  django.po
app/locale/hy/LC_MESSAGES/: django.po
app/locale/id/LC_MESSAGES/: django.mo  django.po
app/locale/mn/LC_MESSAGES/: django.po
app/locale/ru/LC_MESSAGES/: django.mo  django.po
app/locale/uk/LC_MESSAGES/: django.mo  django.po
app/locale_extra/de/LC_MESSAGES/: django.mo  django.po
app/locale_extra/es/LC_MESSAGES/: django.mo  django.po
app/locale_extra/fr/LC_MESSAGES/: django.mo  django.po
app/locale_extra/hy/LC_MESSAGES/: django.mo  django.po
app/locale_extra/id/LC_MESSAGES/: django.mo  django.po
app/locale_extra/mn/LC_MESSAGES/: django.mo  django.po
app/locale_extra/ru/LC_MESSAGES/: django.mo  django.po
app/locale_extra/uk/LC_MESSAGES/: django.mo  django.po
app/middleware/: csrf.py  devpanel.py  locale.py  request.py
app/modules/bots/: notionbot.py  wagbot.py
app/modules/content/: __init__.py  apps.py  forms.py  lookups.py  signals.py  utils.py  views.py  wagtail_hooks.py
app/modules/content/blocks/: __init__.py  generic.py  mixins.py  settings.py  stream.py  values.py
app/modules/content/migrations/: 0001_initial.py  0002_auto_20200811_1448.py  0002_auto_20210913_1702.py  0003_auto_20220202_1705.py  0004_auto_20220203_1216.py  0005_auto_20220203_1337.py  0006_auto_20220203_1359.py  0007_sectionlistingpage_show_child_pages.py  0008_auto_20220203_1603.py  0009_glossarypage.py  0010_jobpage_jobsindexpage.py  0011_auto_20220208_1408.py  0012_auto_20220208_1410.py  0013_auto_20220208_1521.py  0014_auto_20220208_1526.py  0015_add_ctablock_to_article_body_20220208_1653.py  0016_auto_20220208_1723.py  0017_blogarticlepage_blogindexpage_newsarticlepage_newsindexpage_themepage.py  0018_auto_20220209_1427.py  0019_add_authors_to_blog_article_20220209_1510.py  0020_add_authors_to_news_articles.py  0021_teampage_teamprofilepage.py  0022_teamprofilepage_authorship.py  0023_teamprofilepage_intro.py  0025_auto_20220210_1444.py  (+54 more)
app/modules/core/: __init__.py  apps.py  forms.py  utils.py  views.py  wagtail_hooks.py
app/modules/feedback/: forms.py  models.py  wagtail_hooks.py
app/modules/notion/: apps.py  auth.py  commitments.py  cron.py  data.py  export.py  helpers.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py
app/modules/settings/: apps.py  utils.py
app/modules/stats/: README.md  middleware.py  mixins.py  models.py  redis.py  wagtail_hooks.py
app/modules/taxonomy/: apps.py  edit_handlers.py  views.py  wagtail_hooks.py
app/modules/users/: models.py
app/templates/: base.jinja  base_article.jinja  base_with_header.jinja  base_with_header_and_menu.jinja  base_with_menu.jinja  base_without_sidebar.jinja  macros.jinja  search.jinja
app/templates/_partials/: analytics.jinja  card.jinja  card_group.jinja  feedback_form.jinja  footer.jinja  head_meta.jinja  hero.jinja  list_view.jinja  navigation.jinja  page_menu.jinja  pagination.jinja  publication_front_page_details.jinja  search_stream.jinja  share_page.jinja  taxonomies.jinja  taxonomy_areas_of_focus.jinja  taxonomy_countries.jinja  taxonomy_principles.jinja  taxonomy_sections.jinja  taxonomy_sectors.jinja
app/templates/blocks/: article_image.jinja  banner.jinja  block_quote.jinja  card.jinja  card_group.jinja  content_image_panel.jinja  cta.jinja  cta_group.jinja  disclosure.jinja  embed.jinja  embed_banner.jinja  features_list.jinja  glossary_item.jinja  icon_list.jinja  logo_list.jinja  news_listing.jinja  newsletter.jinja  notification.jinja  process_diagram.jinja  quote.jinja  quote_image_panel.jinja  quote_text_banner.jinja  raw_html.jinja  slim_banner.jinja  social_media.jinja  social_media_panel.jinja  speech_bubble_panel.jinja  stats.jinja  steps.jinja  summary_box.jinja  text_columns.jinja  text_panel.jinja  text_us_image_panel.jinja  text_us_speech_bubble_panel.jinja  video_gallery.jinja  video_speech_bubble.jinja
app/templates/content/: article_page.jinja  blog_article_page.jinja  blog_index_page.jinja  blog_news_article_page.jinja  blog_news_index_page.jinja  faq_page.jinja  feature_page.jinja  glossary_page.jinja  home.jinja  index_page.jinja  job_index_page.jinja  job_page.jinja  jobs_index_page.jinja  latest_content.jinja  map_page.jinja  news_article_page.jinja  news_index_page.jinja  press_links.jinja  publication_front_page.jinja  publication_inner_page.jinja  section_listing_page.jinja  section_page.jinja  taxonomy_detail.jinja  taxonomy_tag.jinja  team_page.jinja  team_profile_page.jinja  utility_page.jinja
app/templates/errors/: 404.jinja
app/templates/search/: results.jinja
app/templates/svg/: commitment-icon.jinja  confirm-icon.jinja  down-arrow.jinja  download-document.jinja  expand.jinja  external-link.jinja  filled-circle-icon.jinja  globe.jinja  implementation-icon.jinja  logo_black.jinja  mobile-collapse-icon.jinja  mobile-expand-icon.jinja  not-confirm-icon.jinja  right-arrow.jinja  search-icon.jinja  share-icon.jinja
app/templates/taxonomy/: pages.jinja  press_links.jinja  tagged.jinja  taxonomy_detail.jinja  taxonomy_pages.jinja
app/templates/views/: country.jinja  region.jinja
app/tests/: init.py
app/tests/fixtures/: site.py
app/utils/: forms.py  scaffold.py  storages.py
devops/: hosts  (+1 more)
(+285 files in other folders)
