[tool.poetry]
name = "openownership.org"
version = "0.1.0"
description = "openownership.org"
authors = ["systems@hactar.is"]


[tool.poetry.dependencies]
python = ">=3.8,<3.10"
boto = "*"
boto3 = "^1.26.54"
bugsnag = "*"
click = "*"
consoler = "^0.1.4"
django-cacheops = "*"
django-extensions = "*"
django-storages = "*"
django_select2 = "*"
envkey = "^2"
ipython = "^8.8.0"
jinja2 = "*"
loguru = "*"
psycopg2-binary = "*"
toml = "*"
wagtail = "^5"
wagtail-autocomplete = "^0.9.0"
wagtail-cache = "^2.3.0"
whitenoise = "^6.5.0"
ipdb = "^0.13.13"
wagtail-font-awesome-svg = "^0.0.3"
wagtail-localize = "^1.5.1"
notion-client = "^0.9.0"
django-cron = "^0.6.0"
jedi = "^0.18.2"
wagtail-modelchooser = "^4.0.1"
Jinja2 = "^3.1.2"
django-taggit = "^3.0.0"
Django = "^4.1.7"
django-modelcluster = "^6.0"
gunicorn = "^20.1.0"
django-dbbackup = "^4.0.2"
python-gnupg = "^0.5.0"


[tool.poetry.group.dev.dependencies]
packaging = "^23.0"
coverage = "^7.2.7"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
pytest-pythonpath = "*"
pytest-sugar = "^0.9.7"
codacy-coverage = "^1.3.11"
py = "^1.11.0"

[build-system]
requires = ["poetry.core"]
build-backend = "poetry.masonry.api"


[tool.ruff]
select = [
    "E", "F", "B", "DJ", "C90", "S", "COM", "DTZ", "EM",
    "PT", "RET", "SIM", "TCH", "ARG", "PTH", "PERF"
]
target-version = "py38"  # Change this to match the project
line-length = 100
extend-exclude = ["tests", "*/migrations/*"]
extend-ignore = ["E402", "RET504", "S101", "DJ012"]
ignore-init-module-imports = true

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
