[tool.poetry]
name = "openownership.org"
version = "0.1.0"
description = "openownership.org"
authors = ["Hactar <systems@hactar.is>"]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
boto3 = "^1.26.54"
click = "*"
consoler = "^0.1.4"
django-cacheops = "*"
django-extensions = "*"
django-storages = "*"
django_select2 = "*"
envkey = "^2"
ipython = "^8.8.0"
jinja2 = "*"
loguru = "*"
psycopg2-binary = "*"
toml = "*"
wagtail = "^6.2"
wagtail-autocomplete = "^0.11.0"
wagtail-cache = "^2.3.0"
whitenoise = "^6.5.0"
ipdb = "^0.13.13"
wagtail-font-awesome-svg = "^1.0.1"
wagtail-localize = "^1.7"
notion-client = "^2.2.1"
django-cron = "^0.6.0"
jedi = "^0.19.1"
wagtail-modelchooser = "^4.0.1"
Jinja2 = "^3.1.2"
django-taggit = "^5"
Django = "^5.0"
django-modelcluster = "^6.0"
gunicorn = "^23.0.0"
django-dbbackup = "^4.1.0"
python-gnupg = "^0.5.0"
sentry-sdk = "^2.13.0"
setuptools = "^72.2.0"
sqlparse = "^0.5.1"
pillow = "^10.4.0"
beautifulsoup4 = "^4.12.3"
django-filter = "^24.3"
wagtail-modeladmin = "^2.0.0"


[tool.poetry.group.dev.dependencies]
packaging = "^24.1"
coverage = "^7.2.7"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-django = "^4.5.2"
pytest-pythonpath = "*"
pytest-sugar = "^1.0.0"
codacy-coverage = "^1.3.11"
py = "^1.11.0"
wat-inspector = "^0.4.0"

[build-system]
requires = ["poetry.core"]
build-backend = "poetry.masonry.api"


[tool.ruff]
select = [
    "E", "F", "B", "DJ", "C90", "S", "COM", "DTZ", "EM",
    "PT", "RET", "SIM", "TCH", "ARG", "PTH", "PERF"
]
target-version = "py38"  # Change this to match the project
line-length = 100
extend-exclude = ["tests", "*/migrations/*"]
extend-ignore = ["E402", "RET504", "S101", "DJ012"]
ignore-init-module-imports = true

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
