[project]
name = "app"
version = "0.1.0"
description = "openownership.org"
authors = [{ name = "Hactar", email = "systems@hactar.is" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4~=4.12.3",
    "benzo>=1.1.1",
    "boto3~=1.26.54",
    "click~=8.1.8",
    "consoler~=0.1.4",
    "django>=5.0.8,<5.1.0",
    "django-cacheops~=7.1",
    "django-cron~=0.6.0",
    "django-dbbackup~=4.1.0",
    "django-extensions~=3.2.3",
    "django-filter~=24.3",
    "django-modelcluster~=6.0",
    "django-select2~=8.2.3",
    "django-storages~=1.14.4",
    "django-taggit~=5.0",
    "gunicorn~=23.0.0",
    "ipdb~=0.13.13",
    "ipython~=8.8.0",
    "jedi~=0.19.1",
    "jinja2~=3.1.5",
    "loguru~=0.7.3",
    "notion-client~=2.2.1",
    "phase-dev>=2.1.0",
    "phaser>=1.0.1",
    "pillow~=10.4.0",
    "psycopg2-binary~=2.9.10",
    "python-dotenv>=1.0.1",
    "python-gnupg~=0.5.0",
    "sentry-sdk~=2.13.0",
    "setuptools~=72.2.0",
    "sqlparse~=0.5.1",
    "toml~=0.10.2",
    "wagtail~=6.2",
    "wagtail-autocomplete~=0.11.0",
    "wagtail-cache~=2.5.0",
    "wagtail-font-awesome-svg~=1.0.1",
    "wagtail-localize~=1.7",
    "wagtail-modeladmin~=2.0.0",
    "wagtail-modelchooser~=4.0.1",
    "whitenoise~=6.5.0",
]

[dependency-groups]
dev = [
    "codacy-coverage>=1.3.11",
    "coverage>=7.2.7",
    "packaging>=24.1",
    "py>=1.11.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.5.2",
    "pytest-pythonpath>=0.7.3",
    "pytest-sugar>=1.0.0",
    "wat-inspector>=0.4.0",
]

####################################################################################################
# Sources
####################################################################################################

[tool.uv.sources]
benzo = { index = "hacnet" }
phaser = { index = "hacnet" }

[[tool.uv.index]]
name = "hacnet"
url = "https://pypi.hacnet.dev/"

####################################################################################################
# Ruff etc.
####################################################################################################

[tool.ruff]
target-version = "py312"  # Change this to match the project
line-length = 100
extend-exclude = ["tests", "*/migrations/*", '*/samples/*.py']

[tool.ruff.lint]
select = [
    "E", "F", "B", "DJ", "C90", "S", "COM", "DTZ", "EM",
    "PT", "RET", "SIM", "TCH", "ARG", "PTH", "PERF"
]
extend-ignore = ["E402", "RET504", "S101", "DJ012"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.basedpyright]
basedpyright.disableLanguageServices = true
